src/test/resources/semantic/reject/mistakeInWhileBlock.ul
void main() {
}

void foo() {
    string condition;

    while (false) {
        condition = "string1";
        return condition;
    }
}
